# wshobson-agents-deploy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  COMMANDS.md  FORMATS.md  LICENSE  README.md  agents.ps1  agents.sh  convert.py  converter.py  deploy.py  install.py  installer.py  manifest.py  models.py  pyproject.toml  remove.py  swap.py
targets/: base.py
targets/opencode/: SPEC.md  formatting.py  models.py  target.py
