[project]
name = "wshobson-agents-deploy"
version = "1.0.0"
description = "Migrate wshobson/agents (Claude Code) to OpenCode and other agent platforms"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
follow_imports = "silent"
ignore_missing_imports = true
exclude = ["\\.venv"]
